--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "~3.1.1",
     "angular-route":"1.4.x",
     "angular-resource": "1.4.x",
+    "fastclick": "1.0.3",
     "angular-animate": "1.4.x"
   }
 }
